Add aar type to all dependencies of all support libraries exluding support-annotations
This should fix https://code.google.com/p/android/issues/detail?id=72807 for 
suport  libraries version 21. For version 19 upport-v4 and support-v13 should 
be excluded too because they were jar

Change-Id: Ic1449bf6a8b6ccf9013cbc051a656c25f864aa05

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,13 @@ subprojects {
         repositories {
             mavenDeployer {
                 repository(url: uri("$rootProject.ext.supportRepoOut"))
+                pom.whenConfigured { pom ->
+                    pom.dependencies.findAll { dependency ->
+                        dependency.artifactId != 'support-annotations'
+                    } each { dependency ->
+                        dependency.type = 'aar'
+                    }
+                }
             }
         }
     }
