SmartLinkify with FloatingToolbar.
Ports the framework toolbar to textclassifier for SmartLinkify.
...

Bug: 72307474
Test: wip
Change-Id: I29b994cbdac747117185eb3930faea7a8c155193

--- a/appcompat/src/androidTest/AndroidManifest.xml
+++ b/appcompat/src/androidTest/AndroidManifest.xml
@@ -150,6 +150,10 @@
             android:name="androidx.appcompat.widget.ToolbarTestActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
 
+        <activity
+            android:name="androidx.appcompat.widget.FloatingToolbarActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+
     </application>
 
 </manifest>
