Reproduction case for bug 112931426
Change-Id: I07c26dc2932ebc02154e5e1ac69d4b8f56a47b77

--- a/media2/build.gradle
+++ b/media2/build.gradle
@@ -39,4 +39,5 @@ supportLibrary {
     description = "Media2"
     failOnUncheckedWarnings = false
     failOnDeprecationWarnings = false
+    useMetalava = true
 }
