Create list item with radio button.
TODO: Test
Sample activity
Javadoc
aae eng doc
bug

Change-Id: I7be6593db765b138c7a2e85924ae401b1dc51d48

--- a/samples/SupportCarDemos/build.gradle
+++ b/samples/SupportCarDemos/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 dependencies {
     implementation(project(":car"))
+    implementation(project(":recyclerview-selection"))
 
     compileOnly fileTree(dir: '../../car/core/car-stubs', include: ['android.car.jar'])
 }
