MediaRouter: Handling OnDynamicRoutesChangedListener
Bug: 112521572
Test: ./gradlew updateApi checkApi :mediarouter:connectedCheck
:support-v7-demos:installDebug

Change-Id: I53a46b3d75791443e41871d4304c51727e4613f1

--- a/mediarouter/build.gradle
+++ b/mediarouter/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 dependencies {
     api(project(":media2"))
+    api(project(':versionedparcelable'))
     api(project(":appcompat"))
     api(project(":palette"))
     api(project(":recyclerview"))
@@ -15,6 +16,7 @@ dependencies {
     androidTestImplementation(TEST_RUNNER)
     androidTestImplementation(TEST_RULES)
     androidTestImplementation(ESPRESSO_CORE, libs.exclude_for_espresso)
+    annotationProcessor(project(":versionedparcelable-annotation"))
 }
 
 android {
