Expose a base Activity subclass (ComponentActivity)
Provide a subclass of Activity that provides access
to a subset of composable interfaces designed around
making it easier to listen for Activity callbacks, etc
without subclassing Activity.

The initial implementation provides access to lifecycle
callbacks from LifecycleObservers by implementing the
LifecycleOwner interface.

Test: new ComponentActivityLifecycleTest
BUG: 78542858
Change-Id: I4afae7641b89587e0c0c7530594e4821e8861616

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ def includeProject(name, filePath) {
 //
 /////////////////////////////
 
+includeProject(":activity", "activity")
 includeProject(":annotation", "annotations")
 includeProject(":animation", "animation")
 includeProject(":appcompat", "appcompat")
