Ignore concurrent/listenable-future in dejetifyArchive
Test: ./gradlew buildOnServer
Bug: 113375123
Change-Id: Iaf7dd7998350e97bf9a40313b6cf0efc36d59a90

--- a/jetifier/jetifier/core/src/main/resources/default.generated.config
+++ b/jetifier/jetifier/core/src/main/resources/default.generated.config
@@ -874,6 +874,10 @@
       "to": "ignore"
     },
     {
+      "from": "androidx/concurrent/listenablefuture/(.*)",
+      "to": "ignore"
+    },
+    {
       "from": "androidx/(.*)/ktx/(.*)",
       "to": "ignore"
     },
@@ -2776,10 +2780,6 @@
       "android/support/media/tv/TvContractUtils": "androidx/tvprovider/media/tv/TvContractUtils",
       "android/support/media/tv/WatchNextProgram": "androidx/tvprovider/media/tv/WatchNextProgram",
       "android/support/mediacompat/R": "androidx/media/R",
-      "android/support/multidex/MultiDex": "androidx/multidex/MultiDex",
-      "android/support/multidex/MultiDexApplication": "androidx/multidex/MultiDexApplication",
-      "android/support/multidex/MultiDexExtractor": "androidx/multidex/MultiDexExtractor",
-      "android/support/multidex/ZipUtil": "androidx/multidex/ZipUtil",
       "android/support/percent/PercentFrameLayout": "androidx/percentlayout/widget/PercentFrameLayout",
       "android/support/percent/PercentLayoutHelper": "androidx/percentlayout/widget/PercentLayoutHelper",
       "android/support/percent/PercentRelativeLayout": "androidx/percentlayout/widget/PercentRelativeLayout",
