Adds new API to ShortcutManagerCompat to publish dynamic shortcuts
Adds new APIs to ShortcutManagerCompat to publish/update dynamic
shortcuts. Also adds an implementation of ChooserTargetService in the
support lib which provides backwards compatibility with older
DirectShare APIs.

Additionally, adds new module sharetarget for direct share target
related classes, and moves ShareTargetXmlParser and its unit tests into
the sharetarget module. Also splits ShortcutInfoCompatSaver class to
interface definition in core module, and implementation in the
sharetarget module. ShortcutManagerCompat gets the implementation via
direct reflection.

Test: Unit tests

Change-Id: Ib4dfbec8a511cbda60fbe8047c4241302b69a1c7

--- a/settings.gradle
+++ b/settings.gradle
@@ -157,6 +157,7 @@ includeProject(":versionedparcelable-annotation", "versionedparcelable/annotatio
 includeProject(":versionedparcelable", "versionedparcelable")
 includeProject(":savedstate:savedstate-common", "savedstate/common")
 includeProject(":savedstate:savedstate-bundle", "savedstate/bundle")
+includeProject(":sharetarget", "sharetarget")
 includeProject(":slice-core", "slices/core")
 includeProject(":slice-view", "slices/view")
 includeProject(":slice-builders", "slices/builders")
