Change the minSDkVersion of media2/media-widget to 19
For upcoming release, set minSdkVersion to 19

Bug: 111810898
Test: ./gradlew :media2:check :media-widget:check
Change-Id: I5e400b2aaead04cf3415262cc9e9dec95bdc2230

--- a/media-widget/build.gradle
+++ b/media-widget/build.gradle
@@ -43,6 +43,9 @@ android {
         // remove when b/120615476 is fixed.
         disable("BanTargetApiAnnotation")
     }
+    defaultConfig {
+        minSdkVersion 19
+    }
 }
 
 supportLibrary {
@@ -52,6 +55,6 @@ supportLibrary {
     mavenGroup = LibraryGroups.MEDIA
     inceptionYear = "2018"
     description = "Androidx Media Widget"
-    failOnDeprecationWarnings = false
+    failOnUncheckedWarnings = false
     failOnDeprecationWarnings = false
 }
