--- a/samples/SupportCarDemos/src/main/AndroidManifest.xml
+++ b/samples/SupportCarDemos/src/main/AndroidManifest.xml
@@ -213,7 +213,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SupportCarDemoActivity"/>
         </activity>
-        <activity
+         <activity
             android:name=".GridLayoutTopBottomOffsetActivity"
             android:label="Grid Layout Top/Bottom Offset Demo"
             android:parentActivityName=".SupportCarDemoActivity">
@@ -226,6 +226,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SupportCarDemoActivity"/>
+        </activity>
+        <activity android:name=".MixedColumnPagedListViewActivity"
+            android:label="Mixed Column Paged List View"
+            android:parentActivityName=".SupportCarDemoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.SAMPLE_CODE"/>
+            </intent-filter>
         </activity>
     </application>
 </manifest>
