--- a/core/ktx/build.gradle
+++ b/core/ktx/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 supportLibrary {
     name = "Core Kotlin Extensions"
     publish = true
-    mavenVersion = LibraryVersions.CORE_KTX
+    mavenVersion = LibraryVersions.CORE
     mavenGroup = LibraryGroups.CORE
     inceptionYear = "2018"
     description = "Kotlin extensions for 'core' artifact"
