--- a/palette/ktx/build.gradle
+++ b/palette/ktx/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 supportLibrary {
     name = "Palette Kotlin Extensions"
     publish = true
-    mavenVersion = LibraryVersions.PALETTE_KTX
+    mavenVersion = LibraryVersions.PALETTE
     mavenGroup = LibraryGroups.PALETTE
     inceptionYear = "2018"
     description = "Kotlin extensions for 'palette' artifact"
