--- a/preference/ktx/build.gradle
+++ b/preference/ktx/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 supportLibrary {
     name = "Android Preferences KTX"
     publish = true
-    mavenVersion = LibraryVersions.PREFERENCE_KTX
+    mavenVersion = LibraryVersions.PREFERENCE
     mavenGroup = LibraryGroups.PREFERENCE
     inceptionYear = "2018"
     description = "Kotlin extensions for preferences"
