Lint rule to ban @TargetApi annotation
@TargetApi is discouraged, use of @RequiresApi is preferred instead.

Exception is media2 and media-widget where running the check seems
to crash it (b/120615476)

Bug: 70844246

Test: ./gradlew lintMinDVD with an unsuppressed usage.
Change-Id: I34d6a82be555a9360250d2a2611f84ab25df0999

--- a/media-widget/build.gradle
+++ b/media-widget/build.gradle
@@ -37,6 +37,14 @@ dependencies {
     androidTestImplementation project(':internal-testutils')
 }
 
+android {
+    lintOptions {
+        // Lint bug causes the BanTargetApiAnnotation lint check to crash in this project.
+        // remove when b/120615476 is fixed.
+        disable("BanTargetApiAnnotation")
+    }
+}
+
 supportLibrary {
     name = "Androidx Media Widget library"
     publish = true
