--- a/media2/build.gradle
+++ b/media2/build.gradle
@@ -27,6 +27,14 @@ dependencies {
     annotationProcessor(project(":versionedparcelable-annotation"))
 }
 
+android {
+    lintOptions {
+        // Lint bug causes the BanTargetApiAnnotation lint check to crash in this project.
+        // remove when b/120615476 is fixed.
+        disable("BanTargetApiAnnotation")
+    }
+}
+
 supportLibrary {
     name = "AndroidX media2 library"
     publish = true
