Lint rule to ban @TargetApi annotation
@TargetApi is discouraged, use of @RequiresApi is preferred instead.

Exception is media2 and media-widget where running the check seems
to crash it (b/120615476)

Bug: 70844246

Test: ./gradlew lintMinDVD with an unsuppressed usage.
Change-Id: I34d6a82be555a9360250d2a2611f84ab25df0999

--- a/webkit/build.gradle
+++ b/webkit/build.gradle
@@ -43,6 +43,12 @@ android {
     buildTypes.all {
         consumerProguardFiles new File(webviewBoundaryInterfacesDir, "proguard.flags") , 'proguard-rules.pro'
     }
+
+    lintOptions {
+        // This uses code in platform/external/webview_support_interfaces which uses @TargetApi.
+        // Disable the check here for now until b/120770118 is resolved.
+        disable("BanTargetApiAnnotation")
+    }
 }
 
 supportLibrary {
