--- a/webkit/src/androidTest/AndroidManifest.xml
+++ b/webkit/src/androidTest/AndroidManifest.xml
@@ -20,4 +20,8 @@
          ServiceWorkerWebSettingsCompatTest#testBlockNetworkLoads -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk android:targetSdkVersion="${target-sdk-version}"/>
+    <!-- Note: we must specify this because our local server uses
+         http://localhost URLs (and P defaults to blocking cleartext traffic).
+         -->
+    <application android:usesCleartextTraffic="true" />
 </manifest>
