--- a/preference/build.gradle
+++ b/preference/build.gradle
@@ -58,4 +58,5 @@ supportLibrary {
     description = "AndroidX Preference"
     failOnUncheckedWarnings = false
     failOnDeprecationWarnings = false
+    trackRestrictedAPIs = true
 }
