Change used gradle version to 5.0
Test: ./gradlew bOS
Change-Id: If911f709a3f257f4d1249eb54699f8b46f4840a0

--- a/coordinatorlayout/build.gradle
+++ b/coordinatorlayout/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     androidTestImplementation(TEST_RULES)
     androidTestImplementation(ESPRESSO_CORE, libs.exclude_for_espresso)
     androidTestImplementation(ESPRESSO_CONTRIB, libs.exclude_for_espresso)
+    androidTestImplementation(MOCKITO_CORE, libs.exclude_bytebuddy)
     androidTestImplementation(DEXMAKER_MOCKITO, libs.exclude_bytebuddy) // DexMaker has it"s own MockMaker
     androidTestImplementation project(':internal-testutils'), {
         exclude group: 'androidx.coordinatorlayout', module: 'coordinatorlayout'
