Remove unnecessary @RequiresApi(19) annotations
As minSdkVersion for media-widget has been set to 19,
@RequiresApi(19) annotation is redundant.

Also removed disable("BanTargetApiAnnotation") since
@TargetApi annotations are already gone in media-widget.

Bug: 120636551
Test: ./gradlew buildOnServer
Change-Id: I83ffba8ed4f27d29a9b2fc9010ac8df1245a55b7

--- a/media2/build.gradle
+++ b/media2/build.gradle
@@ -31,7 +31,7 @@ android {
     lintOptions {
         // Lint bug causes the BanTargetApiAnnotation lint check to crash in this project.
         // remove when b/120615476 is fixed.
-        disable("BanTargetApiAnnotation")
+        //disable("BanTargetApiAnnotation")
     }
     defaultConfig {
         minSdkVersion 19
