Check for current thread transaction in CoroutineDispatcher
This CL improves how we handle suspend functions inside transactions.
Now we'll not switch threads if there is an active transaction in the
current thread.

I've also cleaned up TestDatabaseTest in KotlinTestApp which was using
sync executor that would defeat any async test.

Bug: 120854786
Test: SuspendingQueryTest
Change-Id: I6cf676ac99c0adca41b1130446d9f83b2b682483

--- a/room/integration-tests/kotlintestapp/build.gradle
+++ b/room/integration-tests/kotlintestapp/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation(project(":room:room-runtime"))
     implementation(ARCH_CORE_RUNTIME)
     implementation(ARCH_LIFECYCLE_EXTENSIONS)
+    implementation(KOTLIN_STDLIB)
+    implementation(KOTLIN_COROUTINES)
     kaptAndroidTest project(":room:room-compiler")
 
     androidTestImplementation(TEST_RUNNER) {
