Move to using AGP 3.4-0-alpha07
Test: ./gradlew bOS

bug: 120283304
Change-Id: Ia9eb8994b4a80a50057ac980a04be642920ca47b

--- a/work/integration-tests/testapp/build.gradle
+++ b/work/integration-tests/testapp/build.gradle
@@ -30,6 +30,10 @@ android {
             minifyEnabled = true
         }
     }
+    // Remove this as soon as
+    lintOptions {
+        disable("GradleCompatible")
+    }
     defaultConfig.vectorDrawables.useSupportLibrary = true
 }
 
