--- a/buildSrc/build_dependencies.gradle
+++ b/buildSrc/build_dependencies.gradle
@@ -17,7 +17,7 @@
 def build_versions = [:]
 
 build_versions.kotlin = '1.3.0'
-build_versions.lint = '26.3.0-rc01'
+build_versions.lint = '26.4.0-alpha07'
 
 rootProject.ext['build_versions'] = build_versions
 
@@ -31,7 +31,7 @@ if (androidPluginVersionOverride != null) {
     logger.warn("USING OVERRIDDEN ANDROID GRADLE PLUGIN DEPENDENCY OF " + build_libs.gradle)
 } else {
     // Keep gradle plugin version in sync with ub_supportlib-master manifest.
-    build_libs.gradle = 'com.android.tools.build:gradle:3.3.0-rc01'
+    build_libs.gradle = 'com.android.tools.build:gradle:3.4.0-alpha07'
 }
 
 build_libs.lint = [
