Fix bug where padding was added for scroll bar even if it's not enabled.
Also, add tests specific to a PagedListView with no scroll bar. This
attribute is only toggle-able at inflation time.

Change-Id: Ie12ecb48e9357de2b4f51e0afe8484a04909973f
Fixes: 121052337
Test: Test on CarListDialog, which does not have a scroll bar.
Test: ./gradlew car:connectedCheck

--- a/car/core/src/androidTest/AndroidManifest.xml
+++ b/car/core/src/androidTest/AndroidManifest.xml
@@ -31,5 +31,7 @@
                   android:theme="@style/Theme.Car.Light.NoActionBar" />
         <activity android:name="androidx.car.widget.PagedListViewTestActivity"
                   android:theme="@style/Theme.Car.Light.NoActionBar" />
+        <activity android:name="androidx.car.widget.PagedListViewNoScrollBarActivity"
+                  android:theme="@style/Theme.Car.Dark.NoActionBar" />
     </application>
 </manifest>
