WIP move to the provider API
Change-Id: I177c3fc1ffc36afd9e076e379ba4dba000eaf25c

--- a/navigation/common/build.gradle
+++ b/navigation/common/build.gradle
@@ -48,12 +48,14 @@ dependencies {
 }
 
 //used by testCompile safe-args-generator
-android.libraryVariants.all { variant ->
+android.libraryVariants.configureEach { variant ->
     def name = variant.name
     def suffix = name.capitalize()
-    project.tasks.create(name: "jar${suffix}", type: Jar){
-        dependsOn variant.javaCompile
-        from variant.javaCompile.destinationDir
+    project.tasks.register("jar${suffix}", Jar){
+        dependsOn variant.javaCompileProvider
+        from variant.javaCompileProvider.map {
+            it.destinationDir
+        }
         destinationDir new File(project.buildDir, "libJar")
     }
 }
