Move to the task provider API
This CL moves some of our tasks to the new Provider API, which
avoids configuring the task unless necessary. We have a lot of
tasks that are expensive to configure (doing dependency resolution)
so avoiding this is actually a sizeable win for our build.

I've also repliaced some usages of `tasks.all` which triggers
realization of all tasks as soon as they are added. We still
have some of these but they are better isolated at this point.

Unfortunately, the CL is a mixed bag of many things as touching
one file requires updating other parts.

Bug: 121135187
Test: https://paste.googleplex.com/5871126655795200
Change-Id: I177c3fc1ffc36afd9e076e379ba4dba000eaf25c

--- a/persistence/db/build.gradle
+++ b/persistence/db/build.gradle
@@ -33,9 +33,11 @@ dependencies {
 android.libraryVariants.all { variant ->
     def name = variant.name
     def suffix = name.capitalize()
-    def jarTask = project.tasks.create(name: "jar${suffix}", type: Jar){
-        dependsOn variant.javaCompile
-        from variant.javaCompile.destinationDir
+    def jarTask = project.tasks.register("jar${suffix}", Jar){
+        dependsOn variant.javaCompileProvider
+        from variant.javaCompileProvider.map {
+            it.destinationDir
+        }
         destinationDir new File(project.buildDir, "libJar")
     }
 }
