--- a/buildSrc/init.gradle
+++ b/buildSrc/init.gradle
@@ -71,24 +71,26 @@ def setupSubprojectsForBuildServer() {
 
             if (isAndroidLibrary || isAndroidApp) {
                 // Copy the class files in a jar to be later used to generate code coverage report
-                project.android.testVariants.all { v ->
+                project.android.testVariants.configureEach { v ->
                     // check if the variant has any source files
                     // and test coverage is enabled
                     if (v.buildType.testCoverageEnabled
                             && v.sourceSets.any { !it.java.sourceFiles.isEmpty() }) {
-                        def jarifyTask = project.tasks.create(
-                                name: "package${v.name.capitalize()}ClassFilesForCoverageReport",
-                                type: Jar) {
-                            from v.testedVariant.javaCompile.destinationDir
+                        def jarifyTask = project.tasks.register(
+                                "package${v.name.capitalize()}ClassFilesForCoverageReport",
+                                Jar) {
+                            from v.testedVariant.javaCompileProvider.get().destinationDir
                             exclude "**/R.class"
                             exclude "**/R\$*.class"
                             exclude "**/BuildConfig.class"
                             destinationDir BuildServerConfigurationKt.getDistributionDirectory(rootProject)
                             archiveName "${project.name}-${v.baseName}-allclasses.jar"
+                            dependsOn v.getJavaCompileProvider()
                         }
 
-                        jarifyTask.dependsOn v.getJavaCompileProvider()
-                        v.assemble.dependsOn jarifyTask
+                        v.assembleProvider.configure {
+                            it.dependsOn jarifyTask
+                        }
                     }
                 }
             }
