Convert ViewPager2Demos to use AppCompat theme
TabLayout, which will be added in a future commit, requires an AppCompat
theme. The AppCompat theme requires some changes in the layout, which
benefit from some rewriting of the Card constants (suits & values).

Bug: 76406686
Test: ./gradlew viewpager2-demos:installMaxDepVersionsDebug
Change-Id: I28ffb3ea2750d2ec0e609849b6447928eb5873d7

--- a/samples/ViewPager2Demos/src/main/AndroidManifest.xml
+++ b/samples/ViewPager2Demos/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:icon="@drawable/app_sample_code"
         android:label="@string/activity_sample_code"
         android:supportsRtl="true"
-        android:theme="@style/android:Theme.Holo.Light">
+        android:theme="@style/Theme.AppCompat.Light">
 
         <activity android:name=".CardViewActivity" android:label="CardsDemo">
             <intent-filter>
