--- a/samples/ViewPager2Demos/build.gradle
+++ b/samples/ViewPager2Demos/build.gradle
@@ -1,4 +1,5 @@
 import static androidx.build.dependencies.DependenciesKt.KOTLIN_STDLIB
+import static androidx.build.dependencies.DependenciesKt.SUPPORT_DESIGN
 
 /*
  * Copyright (C) 2017 The Android Open Source Project
@@ -25,4 +26,5 @@ plugins {
 dependencies {
     api(KOTLIN_STDLIB)
     implementation(project(":viewpager2"))
+    implementation(SUPPORT_DESIGN)
 }
