--- a/viewpager2/build.gradle
+++ b/viewpager2/build.gradle
@@ -26,6 +26,7 @@ plugins {
 dependencies {
     api(project(":fragment"))
     api(project(":recyclerview"))
+    implementation(SUPPORT_DESIGN)
 
     androidTestImplementation(TEST_RUNNER)
     androidTestImplementation(TEST_RULES)
