--- a/navigation/safe-args-generator/build.gradle
+++ b/navigation/safe-args-generator/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile(KOTLIN_STDLIB)
 
     compile(JAVAPOET)
+    compile(KOTLINPOET)
 
     testCompile(JUNIT)
     testCompile(GOOGLE_COMPILE_TESTING)
